tests/Fixtures/views/errors/error_layout.tpl
<!doctype html>
<html><body>
{block name="content"}{/block}
</body></html>
